# trilogicon-testnet-tools

./: README.md
docs/: faucet_local_payout_readiness_checklist.md  faucet_local_testnet_payout_design.md  faucet_payout_db_design.md  faucet_payout_status_model.md  faucet_payout_worker_design.md  faucet_secret_config_plan.md
faucet/: .gitignore  Cargo.toml
faucet/src/: config.rs  db.rs  main.rs  payout.rs  routes.rs
