[package]
name = "trilogicon-faucet"
version = "0.1.0"
edition = "2021"
description = "TRIL testnet faucet backend (dry-run MVP)"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
